...

            <Button
                android:id="@+id/exitID"
                style="@style/Widget.Material3.Button.TextButton.Dialog"
                android:layout_width="48dp"
...

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                        <Button
                            android:id="@+id/selectJobButtonID"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
...

                    <EditText
                        android:id="@+id/titleID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                    <EditText
                        android:id="@+id/companyID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                        <EditText
                            android:id="@+id/cityID"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
...

                        <EditText
                            android:id="@+id/stateID"
                            android:layout_width="150dp"
                            android:layout_height="match_parent"
...

                    <EditText
                        android:id="@+id/costOfLivingID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                    <EditText
                        android:id="@+id/yearlySalaryID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                    <EditText
                        android:id="@+id/yearlyBonusID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                    <EditText
                        android:id="@+id/trainingFundID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                    <EditText
                        android:id="@+id/leaveTimeID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                    <EditText
                        android:id="@+id/teleworkDaysID"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
...

                        <Button
                            android:id="@+id/updateJobButtonID"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
...

                        <Button
                            android:id="@+id/deleteButtonID"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
...
