<resources>
    <string name="app_name">JobCompare6300</string>
    <string name="job_compare">JobCompare</string>
    <string name="enter_job">Enter Job Details</string>
    <string name="update_job">Update Job Details</string>
    <string name="adjust_setting">Adjusting The Comparison Settings</string>
    <string name="compare">Compare Job Offers</string>
    <string name="placeholder">[Exit]</string>
    <string name="title">Title</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
...
